:recycle: Atualiza método loadUserByUsername para definir a role com base no tipo de usuário como Enum